Issue #4481: Improve readability of suggestions in link autocomplete dropdown.
By @klonos and @BWPanda.

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -803,7 +803,16 @@ form.views-exposed-form {
 #autocomplete li {
   padding: 0 5px;
 }
-
+.autocomplete-description {
+  color: #666;
+  font-size: 80%;
+}
+#autocomplete li.selected .autocomplete-description {
+  color: #ddd;
+}
+[dir="rtl"] .autocomplete-suggestion {
+  float: right;
+}
 
 /**
  * Form elements.
